Correct spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -268,3 +268,8 @@ footer {
     color:#444;
   }
 }
+
+#HASH {
+  display: flex;
+  justify-content: space-between;
+}
